2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_cursor.cpp: updated cursor (arrow ==> hand)

2007-04-24  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_root.cpp,
	* gameswf/gameswf_sprite.cpp,
	* gameswf/gameswf_cursor.* added the mouse cursor that is changed when points to 
	the active object

2007-04-22  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_value.*,
	* gameswf/gameswf_action.cpp: a bit cleanup

2007-04-21  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/a lot of files:
	as_value, as_as_function, as_environment & as_object moved to own files

2007-04-21  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.*: added addProperty() method to as_object()
	added PROPERTY type to as_value()

2007-04-21  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: fixed action_buffer::execute(), 
	Flash keeps local variables after executing of frame actions therefore we should not delete them
	* gameswf/gameswf_sprite.*,
	* gameswf/gameswf_dlist.*,
	* gameswf/gameswf_as_sprite.*: added getNextHighestDepth() sprite method

2007-04-19  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_button.cpp: button on_event() must protect parent
	from deleting just as 'this'

2007-04-19  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.*: fixed local var bug,
	Semantics Flash Action Script differs from semantics C++,
	get_variables() & set_variables() search for local vars in all environment
	declare_local() & set_local() search for local vars up to barrier of environment
	* gameswf/samples/test_local_var.*: added testcase
	* gameswf/gameswf_as_classes/as_mcloader.cpp: cleanup

2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: fixed one of the memory leaks bug

2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_sprite.cpp,
	* gameswf/as_classes/as_mcloader.cpp: cleanup
